--- a/config.conf
+++ b/config.conf
@@ -5,6 +5,9 @@ print_info() {
     info title
     info underline
 
+    info "Name" n
+    info "Download speed" d
+    info "Upload speed" u
     info "OS" distro
     info "Host" model
     info "Kernel" kernel
@@ -39,7 +42,15 @@ print_info() {
 }
 
 # Title
-
+d() {
+speedtest | grep -e "D"
+}
+u() {
+speedtest | grep -e "U"
+}
+n() {
+printf "Maruf"
+}
 
 # Hide/Show Fully qualified domain name.
 #
