--- a/config.conf
+++ b/config.conf
@@ -5,9 +5,9 @@ print_info() {
     info title
     info underline
 
-    info "Name" n
-    info "Download speed" d
-    info "Upload speed" u
+    info "Name" name
+    info "Download speed" down
+    info "Upload speed" uplod
     info "OS" distro
     info "Host" model
     info "Kernel" kernel
@@ -42,13 +42,13 @@ print_info() {
 }
 
 # Title
-d() {
+down() {
 speedtest | grep -e "D"
 }
-u() {
+uplod() {
 speedtest | grep -e "U"
 }
-n() {
+name() {
 printf "Maruf"
 }
 
