--- a/config.conf
+++ b/config.conf
@@ -29,7 +29,7 @@ print_info() {
      info "GPU Driver" gpu_driver  # Linux/macOS only
      info "CPU Usage" cpu_usage
      info "Disk" disk
-     info "Battery" battery
+     info "Battery" bat
      info "Font" font
      info "Song" song
      [[ "$player" ]] && prin "Music Player" "$player"
@@ -42,15 +42,9 @@ print_info() {
 }
 
 # Title
-down() {
-speedtest | grep -e "D"
-}
-uplod() {
-speedtest | grep -e "U"
-}
-name() {
-printf "Maruf"
-}
+down="$(speedtest | grep -e "D")
+uplod="$(speedtest | grep -e "U")
+name="Maruf"
 
 # Hide/Show Fully qualified domain name.
 #
@@ -695,7 +689,7 @@ cpu_display="on"
 memory_display="on"
 battery_display="on"
 disk_display="on"
-
+bat="$(battery_display="on")
 
 # Backend Settings
 
