--- a/config.conf
+++ b/config.conf
@@ -6,8 +6,8 @@ print_info() {
     info underline
 
     info "Name" name
-    info "Download speed" down
-    info "Upload speed" uplod
+    info "Download speed" $down
+    info "Upload speed" $uplod
     info "OS" distro
     info "Host" model
     info "Kernel" kernel
