--- a/config.conf
+++ b/config.conf
@@ -6,8 +6,8 @@ print_info() {
     info underline
 
     info "Name" name
-    info "Download speed" $down
-    info "Upload speed" $uplod
+    info "Download speed" down
+    info "Upload speed" upll
     info "OS" distro
     info "Host" model
     info "Kernel" kernel
@@ -43,7 +43,7 @@ print_info() {
 
 # Title
 down="$(speedtest | grep -e "D")
-uplod="$(speedtest | grep -e "U")
+upll="$(speedtest | grep -e "U")
 name="Maruf"
 
 # Hide/Show Fully qualified domain name.
