--- a/config.conf
+++ b/config.conf
@@ -4,11 +4,11 @@ print_info() {
     info title
     info underline
 
-    info "Name" name
-    info "Download speed" down
-    info "Upload speed" upll
     info "OS" distro
     info "Host" model
+    info "Name" name
+    info "INTERNET" ch
+    
     info "Kernel" kernel
     info "Uptime" uptime
     info "Packages" packages
@@ -25,25 +25,40 @@ print_info() {
     info "GPU" gpu
     info "Memory" memory
 
-     info "GPU Driver" gpu_driver  # Linux/macOS only
-     info "CPU Usage" cpu_usage
-     info "Disk" disk
-     info "Battery" bat
-     info "Font" font
-     info "Song" song
-     [[ "$player" ]] && prin "Music Player" "$player"
-     info "Local IP" local_ip
-     info "Public IP" public_ip
-     info "Users" users
-     info "Locale" locale  # This only works on glibc systems.
+    info "GPU Driver" gpu_driver  # Linux/macOS only
+    info "CPU Usage" cpu_usage
+    info "Disk" disk
+    info "Battery" battery
+    info "Font" font
+    info "Song" song
+    [[ "$player" ]] && prin "Music Player" "$player"
+    info "Local IP" local_ip
+    info "Public IP" public_ip
+    info "Users" users
+    #info "dl & ul speed" dls
+    info "Locale" locale  # This only works on glibc systems.
 
     info cols
 }
+name="Maruf"
+figlet -f font maruf
+
+
+hch() {
+	rm -f index* > /dev/null 2>&1
+	wget www.google.com > /dev/null 2>&1
+	if [ -e index.html ];then
+	printf "\033[1;92m Connected\n\n"
+	rm -f index*
+	else
+	printf "\033[1;91m Not connect !!!\n\n"
+	exit
+	fi
+	}
+	ch="$(hch)"
 
 # Title
-down="$(speedtest | grep -e "D")
-upll="$(speedtest | grep -e "U")
-name="Maruf"
+
 
 # Hide/Show Fully qualified domain name.
 #
@@ -122,18 +137,6 @@ uptime_shorthand="on"
 # on:   '1801MiB / 7881MiB (22%)'
 # off:  '1801MiB / 7881MiB'
 memory_percent="off"
-
-# Change memory output unit.
-#
-# Default: 'mib'
-# Values:  'kib', 'mib', 'gib'
-# Flag:    --memory_unit
-#
-# Example:
-# kib  '1020928KiB / 7117824KiB'
-# mib  '1042MiB / 6951MiB'
-# gib: ' 0.98GiB / 6.79GiB'
-memory_unit="mib"
 
 
 # Packages
@@ -367,10 +370,10 @@ public_ip_timeout=2
 
 # Show Desktop Environment version
 #
-# Default: 'on'
+# Default: 'off'
 # Values:  'on', 'off'
 # Flag:    --de_version
-de_version="on"
+de_version="off"
 
 
 # Disk
@@ -466,8 +469,6 @@ disk_percent="on"
 # mpd
 # muine
 # netease-cloud-music
-# olivia
-# playerctl
 # pogo
 # pragha
 # qmmp
@@ -477,7 +478,6 @@ disk_percent="on"
 # smplayer
 # spotify
 # strawberry
-# tauonmb
 # tomahawk
 # vlc
 # xmms2d
@@ -684,10 +684,11 @@ bar_color_total="distro"
 # infobar: 'info [---=======]'
 # barinfo: '[---=======] info'
 # off:     'info'
-cpu_display="on"
-memory_display="on"
-battery_display="on"
-disk_display="on"
+cpu_display="off"
+memory_display="off"
+battery_display="off"
+disk_display="off"
+
 
 # Backend Settings
 
@@ -696,7 +697,7 @@ disk_display="on"
 #
 # Default:  'ascii'
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
-#           'pot', 'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
+#           'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
 image_backend="ascii"
 
@@ -724,34 +725,34 @@ image_source="auto"
 # Default: 'auto'
 # Values:  'auto', 'distro_name'
 # Flag:    --ascii_distro
-# NOTE: AIX, Alpine, Anarchy, Android, Antergos, antiX, "AOSC OS",
-#       "AOSC OS/Retro", Apricity, ArcoLinux, ArchBox, ARCHlabs,
-#       ArchStrike, XFerience, ArchMerge, Arch, Artix, Arya, Bedrock,
-#       Bitrig, BlackArch, BLAG, BlankOn, BlueLight, bonsai, BSD,
+# NOTE: AIX, Alpine, Anarchy, Android, Antergos, antiX, AOSC,
+#       Apricity, ArcoLinux, ArchBox, ARCHlabs, ArchStrike,
+#       XFerience, ArchMerge, Arch, Artix, Arya, Bedrock, Bitrig,
+#       BlackArch, BLAG, BlankOn, BlueLight, bonsai, BSD,
 #       BunsenLabs, Calculate, Carbs, CentOS, Chakra, ChaletOS,
 #       Chapeau, Chrom*, Cleanjaro, ClearOS, Clear_Linux, Clover,
 #       Condres, Container_Linux, CRUX, Cucumber, Debian, Deepin,
-#       DesaOS, Devuan, DracOS, DarkOs, DragonFly, Drauger, Elementary,
+#       DesaOS, Devuan, DracOS, DragonFly, Drauger, Elementary,
 #       EndeavourOS, Endless, EuroLinux, Exherbo, Fedora, Feren, FreeBSD,
-#       FreeMiNT, Frugalware, Funtoo, GalliumOS, Garuda, Gentoo, Pentoo,
-#       gNewSense, GNOME, GNU, GoboLinux, Grombyang, Guix, Haiku, Huayra,
+#       FreeMiNT, Frugalware, Funtoo, GalliumOS, Gentoo, Pentoo,
+#       gNewSense, GNU, GoboLinux, Grombyang, Guix, Haiku, Huayra,
 #       Hyperbola, janus, Kali, KaOS, KDE_neon, Kibojoe, Kogaion,
 #       Korora, KSLinux, Kubuntu, LEDE, LFS, Linux_Lite,
 #       LMDE, Lubuntu, Lunar, macos, Mageia, MagpieOS, Mandriva,
 #       Manjaro, Maui, Mer, Minix, LinuxMint, MX_Linux, Namib,
 #       Neptune, NetBSD, Netrunner, Nitrux, NixOS, Nurunner,
-#       NuTyX, OBRevenge, OpenBSD, openEuler, OpenIndiana, openmamba,
-#       OpenMandriva, OpenStage, OpenWrt, osmc, Oracle, OS Elbrus, PacBSD,
-#       Parabola, Pardus, Parrot, Parsix, TrueOS, PCLinuxOS, Peppermint,
-#       popos, Porteus, PostMarketOS, Proxmox, Puppy, PureOS, Qubes, Radix,
-#       Raspbian, Reborn_OS, Redstar, Redcore, Redhat, Refracted_Devuan,
-#       Regata, Rosa, sabotage, Sabayon, Sailfish, SalentOS, Scientific,
-#       Septor, SereneLinux, SharkLinux, Siduction, Slackware, SliTaz,
-#       SmartOS, Solus, Source_Mage, Sparky, Star, SteamOS, SunOS,
-#       openSUSE_Leap, openSUSE_Tumbleweed, openSUSE, SwagArch, Tails,
-#       Trisquel, Ubuntu-Budgie, Ubuntu-GNOME, Ubuntu-MATE, Ubuntu-Studio,
-#       Ubuntu, Venom, Void, Obarun, windows10, Windows7, Xubuntu, Zorin,
-#       and IRIX have ascii logos
+#       NuTyX, OBRevenge, OpenBSD, OpenIndiana, OpenMandriva,
+#       OpenWrt, osmc, Oracle, PacBSD, Parabola, Pardus, Parrot,
+#       Parsix, TrueOS, PCLinuxOS, Peppermint, popos, Porteus,
+#       PostMarketOS, Proxmox, Puppy, PureOS, Qubes, Radix, Raspbian,
+#       Reborn_OS, Redstar, Redcore, Redhat, Refracted_Devuan, Regata,
+#       Rosa, sabotage, Sabayon, Sailfish, SalentOS, Scientific, Septor,
+#       SharkLinux, Siduction, Slackware, SliTaz, SmartOS, Solus,
+#       Source_Mage, Sparky, Star, SteamOS, SunOS, openSUSE_Leap,
+#       openSUSE_Tumbleweed, openSUSE, SwagArch, Tails, Trisquel,
+#       Ubuntu-Budgie, Ubuntu-GNOME, Ubuntu-MATE, Ubuntu-Studio, Ubuntu,
+#       Void, Obarun, windows10, Windows7, Xubuntu, Zorin, and IRIX
+#       have ascii logos
 # NOTE: Arch, Ubuntu, Redhat, and Dragonfly have 'old' logo variants.
 #       Use '{distro name}_old' to use the old logos.
 # NOTE: Ubuntu has flavor variants.
@@ -764,7 +765,7 @@ image_source="auto"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="kali"
+ascii_distro="mac"
 
 # Ascii Colors
 #
@@ -855,7 +856,7 @@ xoffset=0
 # Default: ''
 # Values:  'color', 'blue'
 # Flag:    --bg_color
-
+background_color=
 
 
 # Misc Options
