--- a/config.conf
+++ b/config.conf
@@ -36,7 +36,7 @@ print_info() {
     info "Public IP" public_ip
     info "Users" users
     #info "dl & ul speed" dls
-    info "Locale" locale  # This only works on glibc systems.
+    #info "Locale" locale  # This only works on glibc systems.
 
     info cols
 }
